[gd_scene load_steps=3 format=2]

[ext_resource path="res://Coin.gd" type="Script" id=1]
[ext_resource path="res://assets/gem.png" type="Texture" id=2]

[node name="Coin" type="Node2D" groups=[
"coins",
]]
script = ExtResource( 1 )

[node name="Shadow" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 0.196078 )
position = Vector2( 0, 4 )
scale = Vector2( 1, 0.5 )
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="TimeoutTimer" type="Timer" parent="."]
wait_time = 16.0
one_shot = true
autostart = true

[node name="BlinkTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="StartBlinkTimer" type="Timer" parent="."]
wait_time = 13.0
one_shot = true
autostart = true
[connection signal="timeout" from="TimeoutTimer" to="." method="_on_TimeoutTimer_timeout"]
[connection signal="timeout" from="BlinkTimer" to="." method="_on_BlinkTimer_timeout"]
[connection signal="timeout" from="StartBlinkTimer" to="." method="_on_StartBlinkTimer_timeout"]
